# stmod

./: .gitignore  .gitmodules  README.md  generate-eclipse-project.sh
cpp-sources/: CMakeLists.txt  build.sh
cpp-sources/libstmod/: CMakeLists.txt
cpp-sources/libstmod/src/: fe-common.cpp  fe-sampler.cpp  field-output.cpp  fractions.cpp  lin-eq-solver.cpp  matgen.cpp  mesh-output.cpp  mesh-refiner.cpp  mesh.cpp  phys-consts.cpp  poisson-grid.cpp  poisson-solver-adaptor.cpp  poisson-solver.cpp  tensors.cpp  time-iter.cpp  utils.cpp
cpp-sources/libstmod/src/field-operating/: divergence.cpp  gradient.cpp  l2norm.cpp
cpp-sources/libstmod/src/fractions/: fraction-base.cpp  fraction.cpp  gradient.cpp  l2norm.cpp
cpp-sources/libstmod/src/fractions-physics/: divergence.cpp  e.cpp  electric-potential.cpp  electrons-flow.cpp  fraction-base.cpp  heat-power.cpp  reaction-constants.cpp
cpp-sources/libstmod/src/full-models/: model-one.cpp
cpp-sources/libstmod/src/grid/: grid.cpp  mesh-refiner.cpp
cpp-sources/libstmod/src/output/: output.cpp
cpp-sources/libstmod/src/time/: time-iteration.cpp
cpp-sources/libstmod/src/utils/: symmetry-axis.cpp
cpp-sources/libstmod/stmod/: fe-common.hpp  fe-sampler.hpp  field-output.hpp  fractions-base.hpp  fractions.hpp  i-mesh-based.hpp  i-output-provider.hpp  i-steppable.hpp  i-variables-storage.hpp  lin-eq-solver.hpp  matgen.hpp  mesh-output.hpp  mesh-refiner.hpp  mesh.hpp  output-provider.hpp  phys-consts.hpp  poisson-grid.hpp  poisson-solver-adaptor.hpp  poisson-solver.hpp  steppable.hpp  tensors.hpp  time-iter.hpp  utils.hpp  variable.hpp
cpp-sources/libstmod/stmod/field-operating/: divergence.hpp  gradient.hpp  l2norm.hpp
cpp-sources/libstmod/stmod/fractions/: fraction.hpp  secondary-value.hpp
cpp-sources/libstmod/stmod/fractions-physics/: e.hpp  electric-potential.hpp  electrons-flow.hpp  fraction-base.hpp  heat-power.hpp  reaction-constants.hpp
cpp-sources/libstmod/stmod/full-models/: model-one.hpp
cpp-sources/libstmod/stmod/grid/: grid.hpp  mesh-based.hpp  mesh-refiner.hpp
cpp-sources/libstmod/stmod/output/: output.hpp
cpp-sources/libstmod/stmod/time/: time-iterable.hpp  time-iteration.hpp
cpp-sources/libstmod/stmod/utils/: symmetry-axis.hpp
cpp-sources/model-runner/: CMakeLists.txt
cpp-sources/model-runner/src/: main.cpp
cpp-sources/stmod/: CMakeLists.txt
cpp-sources/stmod/include/: fe-sampler.hpp  field-output.hpp  poisson-grid.hpp  poisson-solver.hpp
cpp-sources/stmod/src/: fe-sampler.cpp  field-output.cpp  poisson-grid.cpp  poisson-solver.cpp
cpp-sources/unit-tests/: CMakeLists.txt  test-tensors.cpp  test-utils.cpp
materials/: fedor-solver.cpp
meshes/: make-grid.sh  spheric-needles-1.geo  spheric-needles-1.geo.opt  spheric-needles-1.msh  spheric-needles-2.geo
